Name:              slick
Version:           1.0
License:           BSD3
Author:            Gregory Crosswhite
Maintainer:        Gregory Crosswhite <gcrosswhite@gmail.com>
Synopsis:          
Build-type:        Simple
Cabal-version:     >= 1.8

Library
    HS-source-dirs:  src
    Exposed-modules:
        Slick.Animation
        Slick.Animation.Monad
        Slick.Presentation
        Slick.Render
        Slick.SVG
        Slick.Transition
    Other-modules:
        Slick.Presentation.Internal
    Build-depends:
        base,
        attoparsec == 0.12.*,
        bytestring == 0.10.*,
        conduit == 1.2.*,
        containers == 0.5.*,
        composition == 1.0.*,
        data-default == 0.5.*,
        dlist == 0.7.*,
        lens >= 4.9 && < 5,
        mtl == 2.2.*,
        pointedlist == 0.6.*,
        text == 1.2.*,
        time == 1.5.*,
        transformers == 0.4.*,
        vector >= 0.10 && < 0.12,
        xml-conduit == 1.3.*
    Extra-libraries:
        stdc++
    --     cairo,
    --     gobject-2.0,
    --     rsvg-2
    GHC-options: -auto-all -caf-all -rtsopts
    Pkgconfig-depends:
        cairo,
        gobject-2.0,
        librsvg-2.0,
        sdl2
    C-sources: src/c.cc

Test-suite tests
    Type: exitcode-stdio-1.0
    Main-is: tests.hs
    Hs-source-dirs: tests
    Build-depends:
        slick,
        base,
        composition == 1.0.*,
        HUnit >= 1.2 && < 1.4,
        lens >= 4.9 && < 5,
        random == 1.*,
        test-framework == 0.8.*,
        test-framework-hunit == 0.3.*,
        test-framework-quickcheck2 == 0.3.*,
        QuickCheck >= 2.7 && < 3

Executable example
    Main-is: example.hs
    Build-depends:
        slick,
        base,
        containers == 0.5.*,
        data-default == 0.5.*,
        lens >= 4.9 && < 5,
        text == 1.2.*,
        xml-conduit == 1.3.*
